[package]
name = "wasi-hyperium"
version = "0.2.0"
edition = "2021"

[features]
# TODO: remove at least one of these
default = ["hyperium0", "hyperium1"]
hyperium0 = ["dep:http0", "dep:http-body0", "dep:bytes", "dep:tower-service"]
hyperium1 = ["dep:http1", "dep:http-body1", "dep:bytes"]

[dependencies]
anyhow = "1.0.97"
bytes = { version = "1.10.1", optional = true }
futures-util = "0.3.31"
http0 = { version = "0.2.12", package = "http", optional = true }
http-body0 = { version = "0.4.6", package = "http-body", optional = true }
http1 = { version = "1.3.1", package = "http", optional = true }
http-body1 = { version = "1.0.1", package = "http-body", optional = true }
thiserror = "2.0.12"

tower-service = { version = "0.3.2", optional = true }
wasi = "0.14.2"
